// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UnitAddComponent should save 1`] = `
{
  "building": {
    "addressLine1": "ADDRESS_LINE_1",
    "addressLine2": "ADDRESS_LINE_2",
    "cityOrMunicipality": "CITY_OR_MUNICIPALITY",
    "country": "COU",
    "deletedBy": "DELETED_BY",
    "deletedOnUtc": Any<Date>,
    "gpsData": "GPS_DATA",
    "id": "ID",
    "name": "NAME",
    "postalCode": "POSTAL_CODE",
    "siteName": "SITE_NAME",
    "stateOrProvidence": "STATE_OR_PROVIDENCE",
  },
  "buildingId": "BUILDING_ID",
  "deletedBy": "DELETED_BY",
  "deletedOnUtc": Any<Date>,
  "id": undefined,
  "name": "NAME",
  "roomCount": 0,
}
`;

exports[`UnitAddComponent should support Building filters 1`] = `
[
  {
    "addressLine1": "xyz",
    "addressLine2": "xyz",
    "cityOrMunicipality": "xyz",
    "country": "xyz",
    "deletedBy": "xyz",
    "deletedOnUtc": "xyz",
    "gpsData": "xyz",
    "id": "xyz",
    "name": "xyz",
    "postalCode": "xyz",
    "siteName": "xyz",
    "stateOrProvidence": "xyz",
  },
]
`;

exports[`UnitEditComponent should update 1`] = `
{
  "building": {
    "addressLine1": "ADDRESS_LINE_1",
    "addressLine2": "ADDRESS_LINE_2",
    "cityOrMunicipality": "CITY_OR_MUNICIPALITY",
    "country": "COU",
    "deletedBy": "DELETED_BY",
    "deletedOnUtc": Any<Date>,
    "gpsData": "GPS_DATA",
    "id": "ID",
    "name": "NAME",
    "postalCode": "POSTAL_CODE",
    "siteName": "SITE_NAME",
    "stateOrProvidence": "STATE_OR_PROVIDENCE",
  },
  "buildingId": "BUILDING_ID",
  "deletedBy": "DELETED_BY",
  "deletedOnUtc": Any<Date>,
  "id": "ID",
  "name": "NAME",
  "roomCount": 0,
}
`;
